--- a/src/ui/settings/settings.html
+++ b/src/ui/settings/settings.html
@@ -22,34 +22,90 @@
     <div style="height: 70px"></div>
     <div class="container">
       <div class="jumbotron">
+        <h2 class="display-4">General Settings</h2>
+        <hr class="my-4" />
+        <form>
+          <div class="form-group">
+            <label for="setting:hostName">Host name</label>
+            <input
+              type="text"
+              class="form-control text"
+              id="setting:hostName"
+              placeholder="Enter Hostname"
+              setting="hostName"
+            />
+          </div>
+          <div class="form-group">
+            <label for="setting:syncMethod">Sync Method</label>
+            <select
+              class="custom-select text"
+              id="inputGroupSelect01 setting:syncMethod"
+              setting="syncMethod"
+            >
+              <option selected value="gist">Gist</option>
+              <option value="repo">Repo</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="setting:ignoredExtensions">Ignored Extensions</label>
+            <textarea
+              class="form-control textarea"
+              id="setting:ignoredExtensions"
+              rows="3"
+              data-min-rows="3"
+              placeholder="Enter one extension per line (full name)"
+              setting="ignoredExtensions"
+            ></textarea>
+          </div>
+          <div class="custom-control custom-checkbox my-1 mr-sm-2">
+            <input
+              class="custom-control-input checkbox"
+              type="checkbox"
+              id="setting:disableUpdateMessage"
+              setting="disableUpdateMessage"
+            />
+            <label
+              for="setting:disableUpdateMessage"
+              class="custom-control-label"
+            >
+              Disable Update Message
+            </label>
+          </div>
+        </form>
+      </div>
+      <div class="jumbotron">
         <h2 class="display-4">Gist Settings</h2>
         <hr class="my-4" />
         <form>
           <div class="form-group">
-            <label>GitHub Token</label>
+            <label for="setting:gistSettings:token">GitHub Token</label>
             <input
               type="text"
-              class="form-control"
+              class="form-control text"
               id="setting:gistSettings:token"
               placeholder="Enter Token"
               setting="gistSettings.token"
             />
           </div>
           <div class="form-group">
-            <label>Gist Description</label>
+            <label for="setting:gistSettings:gistDescription"
+              >Gist Description</label
+            >
             <input
               type="text"
-              class="form-control"
+              class="form-control text"
               id="setting:gistSettings:gistDescription"
               placeholder="Enter Gist Description"
               setting="gistSettings.gistDescription"
             />
           </div>
           <div class="form-group">
-            <label>GitHub Enterprise URL</label>
+            <label for="setting:gistSettings:githubEnterpriseUrl"
+              >GitHub Enterprise URL</label
+            >
             <input
               type="text"
-              class="form-control"
+              class="form-control text"
               id="setting:gistSettings:githubEnterpriseUrl"
               placeholder="Enter GitHub Enterprise URL"
               setting="gistSettings.githubEnterpriseUrl"
@@ -57,7 +113,7 @@
           </div>
           <div class="custom-control custom-checkbox my-1 mr-sm-2">
             <input
-              class="custom-control-input"
+              class="custom-control-input setting checkbox"
               type="checkbox"
               id="setting:gistSettings:askGistName"
               setting="gistSettings.askGistName"
@@ -71,7 +127,7 @@
           </div>
           <div class="custom-control custom-checkbox my-1 mr-sm-2">
             <input
-              class="custom-control-input"
+              class="custom-control-input checkbox"
               type="checkbox"
               id="setting:gistSettings:downloadPublicGist"
               setting="gistSettings.downloadPublicGist"
@@ -85,7 +141,7 @@
           </div>
           <div class="custom-control custom-checkbox my-1 mr-sm-2">
             <input
-              class="custom-control-input"
+              class="custom-control-input checkbox"
               type="checkbox"
               id="setting:gistSettings:openTokenLink"
               setting="gistSettings.openTokenLink"
@@ -97,6 +153,58 @@
               Open Token Link
             </label>
           </div>
+          <div class="form-group">
+            <label for="setting:gistSettings:ignoreUploadFiles"
+              >Ignored Files</label
+            >
+            <textarea
+              class="form-control textarea"
+              id="setting:gistSettings:ignoreUploadFiles"
+              rows="3"
+              data-min-rows="3"
+              placeholder="Enter one file per line"
+              setting="gistSettings.ignoreUploadFiles"
+            ></textarea>
+          </div>
+          <div class="form-group">
+            <label for="setting:gistSettings:ignoreUploadFolders"
+              >Ignored Folders</label
+            >
+            <textarea
+              class="form-control textarea"
+              id="setting:gistSettings:ignoreUploadFolders"
+              rows="3"
+              data-min-rows="3"
+              placeholder="Enter one folder per line"
+              setting="gistSettings.ignoreUploadFolders"
+            ></textarea>
+          </div>
+          <div class="form-group">
+            <label for="setting:gistSettings:ignoreUploadSettings"
+              >Ignored Settings</label
+            >
+            <textarea
+              class="form-control textarea"
+              id="setting:gistSettings:ignoreUploadSettings"
+              rows="3"
+              data-min-rows="3"
+              placeholder="Enter one setting per line"
+              setting="gistSettings.ignoreUploadSettings"
+            ></textarea>
+          </div>
+          <div class="form-group">
+            <label for="setting:gistSettings:supportedFileExtensions"
+              >Supported File Extensions</label
+            >
+            <textarea
+              class="form-control textarea"
+              id="setting:gistSettings:supportedFileExtensions"
+              rows="3"
+              data-min-rows="3"
+              placeholder="Enter one file extension per line"
+              setting="gistSettings.supportedFileExtensions"
+            ></textarea>
+          </div>
         </form>
       </div>
       <div class="jumbotron">
@@ -104,34 +212,45 @@
         <hr class="my-4" />
         <form>
           <div class="form-group">
-            <label>GitHub Repo</label>
+            <label for="setting:repoSettings:repo">GitHub Repo</label>
             <input
               type="text"
-              class="form-control"
+              class="form-control text"
               id="setting:repoSettings:repo"
               placeholder="Enter Git Repo URL (e.g. github.com/username/repo.git)"
               setting="repoSettings.repo"
             />
           </div>
           <div class="form-group">
-            <label>GitHub Token</label>
+            <label for="setting:repoSettings:token">GitHub Token</label>
             <input
               type="text"
-              class="form-control"
+              class="form-control text"
               id="setting:repoSettings:token"
               placeholder="Enter GitHub Token"
               setting="repoSettings.token"
             />
           </div>
           <div class="form-group">
-            <label>GitHub Username</label>
+            <label for="setting:repoSettings:username">GitHub Username</label>
             <input
               type="text"
-              class="form-control"
+              class="form-control text"
               id="setting:repoSettings:username"
               placeholder="Enter GitHub Username"
               setting="repoSettings.username"
             />
+          </div>
+          <div class="form-group">
+            <label for="setting:repoSettings:ignoredItems">Ignored Items</label>
+            <textarea
+              class="form-control textarea"
+              id="setting:repoSettings:ignoredItems"
+              rows="3"
+              data-min-rows="3"
+              placeholder="Enter one file or folder per line"
+              setting="repoSettings.ignoredItems"
+            ></textarea>
           </div>
         </form>
       </div>
@@ -151,16 +270,55 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
     <script>
+      let settings;
       const vscode = acquireVsCodeApi();
-      $(":input").change(function() {
-        let val = $(this).val();
-        if ($(this).attr("type") === "checkbox") {
-          val = $(this).is(":checked");
-        }
+      $(".checkbox").change(function() {
+        let val = $(this).is(":checked");
         vscode.postMessage({
           command: $(this).attr("setting"),
           text: val
+        });
+      });
+      $(".textarea").change(function() {
+        let val = [];
+        $(this)
+          .val()
+          .split("\n")
+          .forEach(item => {
+            if (item !== "") {
+              val.push(item);
+            }
+          });
+        vscode.postMessage({
+          command: $(this).attr("setting"),
+          text: val
+        });
+      });
+      $(".text").change(function() {
+        let val = $(this).val();
+        this.is(":checked");
+
+        vscode.postMessage({
+          command: $(this).attr("setting"),
+          text: val
+        });
+      });
+      window.addEventListener("message", function(event) {
+        settings = JSON.parse(event.data);
+        $(".checkbox").each((i, el) => {
+          $(el).prop("checked", _.get(settings, $(el).attr("setting")));
+        });
+        $(".text").each((i, el) => {
+          $(el).val(_.get(settings, $(el).attr("setting")));
+        });
+        $(".textarea").each((i, el) => {
+          let str = "";
+          _.get(settings, $(el).attr("setting")).forEach(
+            item => (str += item + "\n")
+          );
+          $(el).val(str);
         });
       });
     </script>
