Add new element for gist id

--- a/src/ui/settings/settings.html
+++ b/src/ui/settings/settings.html
@@ -79,6 +79,16 @@
         <hr class="my-4" />
         <form>
           <div class="form-group">
+            <label for="setting:gistSettings:gist">Gist ID</label>
+            <input
+              type="text"
+              class="form-control text"
+              id="setting:gistSettings:gist"
+              placeholder="Enter Gist ID"
+              setting="gistSettings.gist"
+            />
+          </div>
+          <div class="form-group">
             <label for="setting:gistSettings:token">GitHub Token</label>
             <input
               type="text"
