--- a/ui/settings/settings.html
+++ b/ui/settings/settings.html
@@ -16,17 +16,23 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,900"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="@PWD/ui/settings/settings.css" />
+    <link rel="stylesheet" href="@PWD/ui/shared/styles.css" />
   </head>
   <body>
-    <div style="height: 70px"></div>
-    <div class="container">
-      <div class="jumbotron">
-        <h2 class="display-4">Sync Settings</h2>
-        <hr class="my-4" />
-        <form id="root"></form>
+    <header class="masthead">
+      <div class="container d-flex h-100 align-items-center">
+        <div class="mx-auto text-center">
+          <h1 class="mx-auto mb-4 text-white-50">
+            Settings Sync
+          </h1>
+          <h4 class="text-white-50 mx-auto mt-2 mb-3">
+            Global Settings
+          </h4>
+          <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+          <form class="text-left" id="root"></form>
+        </div>
       </div>
-    </div>
+    </header>
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"
