Remove docs button to make it look better

--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -23,13 +23,13 @@
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
           <img
-            src="https://i.imgur.com/yEPhHdu.png"
+            src="https://i.imgur.com/uu5VLwx.png"
             width="256"
             height="256"
             alt="Settings Sync"
             class="animated-logo"
           />
-          <h1 class="mx-auto my-0 text-white-50 text-uppercase">
+          <h1 class="mx-auto mb-4 text-white-50 atext-uppercase">
             Settings Sync
           </h1>
           <h4 class="text-white-50 mx-auto mt-2 mb-3">
@@ -45,12 +45,6 @@
             title="Log in with GitHub"
             class="btn btn-primary"
             >Log in with GitHub</a
-          >
-          <a
-            href="https://github.com/shanalikhan/code-settings-sync/blob/master/README.md"
-            title="Log in with GitHub"
-            class="btn btn-primary"
-            >Read the Docs</a
           >
         </div>
       </div>
