WIP. Update to look like Bookmarks extension

--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -22,13 +22,6 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <img
-            src="https://i.imgur.com/uu5VLwx.png"
-            width="256"
-            height="256"
-            alt="Settings Sync"
-            class="animated-logo"
-          />
           <h1 class="mx-auto mb-4 text-white-50 atext-uppercase">
             Settings Sync
           </h1>
@@ -39,13 +32,31 @@
             Elegant synchronization for your Visual Studio Code settings across
             multiple machines.
           </h2>
-          <a
-            href="#"
-            onclick="logInWithGitHub()"
-            title="Log in with GitHub"
-            class="btn btn-primary"
-            >Log in with GitHub</a
-          >
+          <div class="row">
+            <div class="col-sm">
+              <div id="release-notes">
+                <h3 class="text-white-50 mx-auto mt-2 mb-3">
+                  Changelog - New in
+                  <a
+                    href="https://github.com/shanalikhan/code-settings-sync/blob/master/CHANGELOG.md#v327---march-062019"
+                    >v3.2.7</a
+                  >
+                </h3>
+                <h5 class="change text-white-50 mx-auto mt-2 mb-3">
+                  Fixed Extension Sync on Windows
+                </h5>
+              </div>
+            </div>
+            <div class="col-sm">
+              <a
+                href="#"
+                onclick="logInWithGitHub()"
+                title="Log in with GitHub"
+                class="btn btn-primary"
+                >Log in with GitHub</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </header>
