Improve UI and map changes onto release notes section

--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -36,16 +36,16 @@
             <div class="col-sm">
               <div id="release-notes">
                 <h3 class="text-white-50 mx-auto mt-2 mb-3">
-                  Changelog -
-                  <a
-                    href="https://github.com/shanalikhan/code-settings-sync/blob/master/CHANGELOG.md#v327---march-062019"
-                    >v3.2.7</a
-                  >
+                  Release Notes
                 </h3>
-
-                <h5 class="change text-white-50 mx-auto mt-2 mb-3">
-                  Fixed Extension Sync on Windows
-                </h5>
+                <h4 class="text-white-50 mx-auto mt-2 mb-3">
+                  <a
+                    id="current-version"
+                    href="https://github.com/shanalikhan/code-settings-sync/blob/master/CHANGELOG.md"
+                    >vX.X.X</a
+                  >
+                </h4>
+                <div id="notes"></div>
               </div>
             </div>
             <div class="col-sm">
@@ -87,8 +87,8 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script>
-      const changelog = JSON.parse("@CHANGELOG_DATA");
+    <script defer>
+      const releaseNotes = JSON.parse(`@RELEASE_NOTES`);
     </script>
     <script defer src="@PWD/ui/landing-page/landing-page.js"></script>
   </body>
