Update settings page

--- a/ui/settings/settings.html
+++ b/ui/settings/settings.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header class="masthead">
-      <div class="container d-flex h-100 align-items-center">
+      <div class="container d-flex h-100">
         <div class="mx-auto text-center">
           <h1 class="mx-auto mb-4 text-white-50">
             Settings Sync
