--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -13,7 +13,11 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,900"
+      href="https://fonts.googleapis.com/css?family=Roboto:400"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:700"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="@PWD/ui/shared/styles.css" />
@@ -40,22 +44,20 @@
             by <a href="https://github.com/shanalikhan">@shanalikhan</a>
           </h2>
           <div class="row">
-            <div class="col text-left">
-              <div id="release-notes" class="mb-2 mt-2">
-                <div class="scrollable" id="notes">
-                  <h3 class="mx-auto mt-2 mb-3 text-white-50">
-                    What's New in
-                    <a
-                      id="current-version"
-                      href="https://github.com/shanalikhan/code-settings-sync/blob/master/CHANGELOG.md"
-                      >X.X.X</a
-                    >
-                  </h3>
-                </div>
+            <div class="col text-left mb-2 mt-2">
+              <div class="scrollable" id="notes">
+                <h3 class="mx-auto mt-2 mb-3 text-white-50">
+                  What's New in
+                  <a
+                    id="current-version"
+                    href="https://github.com/shanalikhan/code-settings-sync/blob/master/CHANGELOG.md"
+                    >vX.X.X</a
+                  >
+                </h3>
               </div>
             </div>
-            <div class="col scrollable">
-              <div class="mb-2 mt-2">
+            <div class="col mb-2 mt-2 scrollable">
+              <div>
                 <h3 class="mx-auto mt-2 mb-3 text-white-50 text-left">
                   Configuration
                 </h3>
@@ -80,7 +82,7 @@
                   >Edit Configuration</a
                 >
               </div>
-              <div class="mb-2 mt-2">
+              <div>
                 <h3 class="mx-auto mb-3 text-white-50 text-left">
                   Show Your Support
                 </h3>
@@ -137,8 +139,8 @@
                   Sponsors
                 </h3>
                 <p class="mx-auto mt-2 mb-3 text-white-50">
-                  Settings Sync Looking for sponsors to display here. Contact me
-                  on <a href="https://twitter.com/itsShanKhan">Twitter</a> or
+                  Settings Sync is looking for sponsors to display here. Contact
+                  me on <a href="https://twitter.com/itsShanKhan">Twitter</a> or
                   <a href="https://github.com/shanalikhan">GitHub</a>
                 </p>
               </div>
