--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -111,7 +111,7 @@
                     >Write a review</a
                   ><br />
                   <a href="https://github.com/shanalikhan/code-settings-sync"
-                    >Star or Fork me on Github</a
+                    >Star or Fork Settings Sync on Github</a
                   ><br />
                   <a href="https://twitter.com/itsShanKhan"
                     >Follow me on Twitter</a
