Add tooltips with localized descriptions of each setting

--- a/ui/settings/settings.html
+++ b/ui/settings/settings.html
@@ -44,35 +44,22 @@
             by <a href="https://github.com/shanalikhan">@shanalikhan</a>
           </h2>
           <div class="row text-left">
-            <div class="col mt-2 scrollable">
+            <div class="col mt-2">
               <h3 class="mx-auto mt-2 mb-3 text-white-50">
                 Environment Settings
               </h3>
               <form id="environmentSettings"></form>
+              <p
+                id="saveStatus"
+                class="text-white-50 mt-4"
+                style="display: inline"
+              ></p>
             </div>
-            <div class="col mt-2 scrollable">
+            <div class="col mt-2">
               <h3 class="mx-auto mt-2 mb-3 text-white-50">
                 Global Settings
               </h3>
               <form id="globalSettings"></form>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col"></div>
-            <div class="col text-right">
-              <p
-                id="saveStatus"
-                class="text-white-50 mr-2"
-                style="display: inline"
-              ></p>
-              <!-- <a
-                href="#"
-                onclick="save()"
-                title="Save Settings"
-                class="btn btn-primary mr-2"
-                style="width: 40%;"
-                >Save</a
-              > -->
             </div>
           </div>
         </div>
