--- a/ui/settings/settings.html
+++ b/ui/settings/settings.html
@@ -20,6 +20,12 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:700"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="@PWD/ui/shared/styles.css" />
   </head>
   <body>
