Improve save indicator

--- a/ui/settings/settings.html
+++ b/ui/settings/settings.html
@@ -57,8 +57,8 @@
               <form id="environmentSettings"></form>
               <p
                 id="saveStatus"
-                class="text-white-50 mt-4"
-                style="display: inline"
+                class="text-white-50"
+                style="font-size: 3rem"
               ></p>
             </div>
             <div class="col mt-2">
